--- a/01-index.qmd
+++ b/01-index.qmd
@@ -6,12 +6,10 @@ format:
     linestretch: 1
 ---
 
-# 🙋🏻 Bio
-
 ::::::: columns
 :::::: row
 ::: {align="center"}
-<iframe width="560" height="315" src="https://www.youtube.com/embed/stL5mwCNn8k?si=SYsFLc9J2C8E5kQH&amp;start=6" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/stL5mwCNn8k?si=SYsFLc9J2C8E5kQH&amp;start=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
 
 </iframe>
 :::
@@ -20,7 +18,7 @@ format:
 :::
 
 ::: row
-Hi, there! My name is Adrian Correndo. I was born and raised in Buenos Aires, Argentina. I live with my family in Guelph, ON, Canada, where I work for the Department of Plant Agriculture at the [University of Guelph](https://www.plant.uoguelph.ca) as an Assistant Professor and the Research Chair for the The Pick Family Chair in Sustainable Cropping Systems.
+Hi, there! My name is Adrian Correndo. I was born and raised in Buenos Aires, Argentina. I live with my family in Guelph, ON, Canada, where I work for the Department of Plant Agriculture at the [University of Guelph](https://www.plant.uoguelph.ca) as an Assistant Professor and the The Pick Family Research Chair in Sustainable Cropping Systems.
 
 My mission is to develop and evaluate cropping systems that effectively deal with the challenge of producing more food, fuel, and fiber without degrading our natural resources. On this endeavor, I perform research, teaching, and outreach activities for Ontario farmers and agriculture stakeholders.
 
@@ -48,5 +46,5 @@ At the [Talks](https://adriancorrendo.github.io/05-talks.html) section you'll fi
 
 ## 📂 CV
 
-Download CV: [{{< fa file-pdf >}}](https://raw.githubusercontent.com/adriancorrendo/adriancorrendo.github.io/main/assets/resources/CV_Correndo_APR-03-2023.pdf){#CV}
+Download CV: [{{< fa file-pdf >}}](https://raw.githubusercontent.com/adriancorrendo/adriancorrendo.github.io/main/assets/resources/cv_correndoadrian_dec2024.pdf){#CV}
 :::::::
