--- a/03-publications.qmd
+++ b/03-publications.qmd
@@ -9,67 +9,69 @@ format:
 ::: panel-tabset
 # 📑Refereed
 
-### Total (30)
+### Total (31)
 
 1.  Abdala, L., Tamagno, S., Ruiz, A., Schwalbert, R.A., **Correndo, A.A.**, Martin, N. 2025. Yield environment changes the ranking of soybean genotypes. *Field Crops Res.* 321, 109661. <https://doi.org/10.1016/j.fcr.2024.109661>
 
-2.  Almeida, Luiz F., **Correndo, A.A.**, Hefley, T., HIntz, G., Vara Prasad, P.V., Litch, M., Casteel, S., Singh, M., Naeve, S., Bais, J., Lindsay, L., Conley, S., Kleinjan, J., Kovacs, P., Ciampitti, I.A. 2025. Assessing the influence of environmental drivers on soybean seed yield and nitrogen fixation estimates and uncertainties in the United States. *European Journal of Agronomy*, 162, 127428. <https://doi.org/10.1016/j.eja.2024.127428>
+2.  Bybee-Finley, K.A., Muller, K., White, K.E., Cavigelli., M.A., Han, E., Schomberg, H.H., Snapp, S., Viens, F., **Correndo, A.A.**, Deiss, L., Fonte, Garcia y Garcia, A., Gaudin, A.C.M., Hooker, D.C., Jin, V., Johnson, G., Karsten, H., Liebman, M., McDaniel, M.D., Sanford, G., Schmer, M.R., Strock, J., Sykes, V.R., Verhulst, N., Wilke, B., Bowles, T. 2024. Rotational complexity increases cropping system output under poorer growing conditions. <https://doi.org/10.1016/j.oneear.2024.07.008>
 
-3.  Rodriguez M., Carcedo A., **Correndo A.**, Crespo C., Carciochi W., Sainz Rozas H., Ciampitti I., Barbieri P. 2024. Assessing the nitrogen supply of hairy vetch in a soybean-wheat sequence. *Field Crops Res.*, 316, 109496 - 109496. <https://doi.org/10.1016/j.fcr.2024.109496>
+3.  Almeida, Luiz F., **Correndo, A.A.**, Hefley, T., HIntz, G., Vara Prasad, P.V., Litch, M., Casteel, S., Singh, M., Naeve, S., Bais, J., Lindsay, L., Conley, S., Kleinjan, J., Kovacs, P., Ciampitti, I.A. 2025. Assessing the influence of environmental drivers on soybean seed yield and nitrogen fixation estimates and uncertainties in the United States. *European Journal of Agronomy*, 162, 127428. <https://doi.org/10.1016/j.eja.2024.127428>
 
-4.  Giordano, N., Sadras, V.O., **Correndo, A.A.**, Lollato, R.P. 2023. Cultivar-specific phenotypic plasticity of yield and grain protein concentration in response to nitrogen in winter wheat. *Field Crops Res.* 306, 109202. <https://doi.org/10.1016/j.fcr.2023.109202>
+4.  Rodriguez M., Carcedo A., **Correndo A.**, Crespo C., Carciochi W., Sainz Rozas H., Ciampitti I., Barbieri P. 2024. Assessing the nitrogen supply of hairy vetch in a soybean-wheat sequence. *Field Crops Res.*, 316, 109496 - 109496. <https://doi.org/10.1016/j.fcr.2024.109496>
 
-5.  Rodriguez, M., Vargas, J., **Correndo, A.**, Carcedo, A., Carciochi, W., Barbieri, P., & Ciampitti, I.A. A meta-analysis of hairy vetch as a previous cover crop for maize. *Heliyon* 9 (2023), e22621. <https://doi.org/10.1016/j.heliyon.2023.e22621>
+5.  Giordano, N., Sadras, V.O., **Correndo, A.A.**, Lollato, R.P. 2023. Cultivar-specific phenotypic plasticity of yield and grain protein concentration in response to nitrogen in winter wheat. *Field Crops Res.* 306, 109202. <https://doi.org/10.1016/j.fcr.2023.109202>
 
-6.  Hernandez, C.H., **Correndo, A.A.**, Kyveryga, P., Prestholt, A., Ciampitti, I.A., 2023. On-farm soybean seed protein and oil prediction using satellite data. *Comput. Electron. Agric.* 212, 108096. <https://doi.org/10.1016/j.compag.2023.108096>
+6.  Rodriguez, M., Vargas, J., **Correndo, A.**, Carcedo, A., Carciochi, W., Barbieri, P., & Ciampitti, I.A. A meta-analysis of hairy vetch as a previous cover crop for maize. *Heliyon* 9 (2023), e22621. <https://doi.org/10.1016/j.heliyon.2023.e22621>
 
-7.  Toribio, M., Iglesias, M. P., Correndo, A., Wyngaard, N. ., & Reussi Calvo, N. 2023. Determinants of ammonia volatilization losses and their effect on maize yield. Ciencia Del Suelo, 41(2), 193–205. <https://www.ojs.suelos.org.ar/index.php/cds/article/view/801>
+7.  Hernandez, C.H., **Correndo, A.A.**, Kyveryga, P., Prestholt, A., Ciampitti, I.A., 2023. On-farm soybean seed protein and oil prediction using satellite data. *Comput. Electron. Agric.* 212, 108096. <https://doi.org/10.1016/j.compag.2023.108096>
 
-8.  Antunes de Almeida, L.F., **Correndo, A.A.**, Ciampitti. I.A., et al., 2023. Soybean yield response to nitrogen and sulfur fertilization in the United States: contribution of soil N and N fixation processes. *Eur. J. Agron.* 145, 126791. <https://doi.org/10.1016/j.eja.2023.126791>
+8.  Toribio, M., Iglesias, M. P., Correndo, A., Wyngaard, N. ., & Reussi Calvo, N. 2023. Determinants of ammonia volatilization losses and their effect on maize yield. Ciencia Del Suelo, 41(2), 193–205. <https://www.ojs.suelos.org.ar/index.php/cds/article/view/801>
 
-9.  Carcedo, A.J., Viera N., Marziotte, L., **Correndo, A.A.**, Alemo, A., Vara Prasad, P.V., Min, D., Stewart, Z.P., Faye, A., and Ciampitti, I.A., 2023. The urgency for investment on local data for advancing options for improving crop productivity and climate resilience assessments in Africa: a review for APSIM crop modeling. *Env. Modell. Soft* 161, 105633. <https://doi.org/10.1016/j.envsoft.2023.105633>
+9.  Antunes de Almeida, L.F., **Correndo, A.A.**, Ciampitti. I.A., et al., 2023. Soybean yield response to nitrogen and sulfur fertilization in the United States: contribution of soil N and N fixation processes. *Eur. J. Agron.* 145, 126791. <https://doi.org/10.1016/j.eja.2023.126791>
 
-10. Moro Rosso, L.H., de Borja Reis, A.F., Tamagno, S., **Correndo, A.A.**, Vara Prasad, P.V., Ciampitti. I.A., 2023. Temporal variation of soil N supply defines N fixation in soybeans. *Eur. J. Agron* 144, 126745. <https://doi.org/10.1016/j.eja.2023.126745>
+10. Carcedo, A.J., Viera N., Marziotte, L., **Correndo, A.A.**, Alemo, A., Vara Prasad, P.V., Min, D., Stewart, Z.P., Faye, A., and Ciampitti, I.A., 2023. The urgency for investment on local data for advancing options for improving crop productivity and climate resilience assessments in Africa: a review for APSIM crop modeling. *Env. Modell. Soft* 161, 105633. <https://doi.org/10.1016/j.envsoft.2023.105633>
 
-11. **Correndo, A.A.**, Pearce, A., Bolster, C., Spargo, J., Osmond, D., and Ciampitti, I.A., 2023. The soiltestcorr R package: An accessible framework for reproducible correlation analysis of crop yield and soil test data. Submitted to *SoftwareX* 21, 101275, <https://doi.org/10.1016/j.softx.2022.101275>
+11. Moro Rosso, L.H., de Borja Reis, A.F., Tamagno, S., **Correndo, A.A.**, Vara Prasad, P.V., Ciampitti. I.A., 2023. Temporal variation of soil N supply defines N fixation in soybeans. *Eur. J. Agron* 144, 126745. <https://doi.org/10.1016/j.eja.2023.126745>
 
-12. Bolster, C., **Correndo, A.A.**, Pearce, A., Spargo, J., Osmond, D., and Slaton, N., 2023. A spreadsheet for determining critical soil test values using the modified arcsine-log calibration curve. Submitted to *Soil Sci. Soc. Am. J.* 87, 182-189, <https://doi.org/10.1002/saj2.20498>
+12. **Correndo, A.A.**, Pearce, A., Bolster, C., Spargo, J., Osmond, D., and Ciampitti, I.A., 2023. The soiltestcorr R package: An accessible framework for reproducible correlation analysis of crop yield and soil test data. Submitted to *SoftwareX* 21, 101275, <https://doi.org/10.1016/j.softx.2022.101275>
 
-13. **Correndo, A.A.**, Moro Rosso, L.H., Hernandez, C.H., Bastos, L.M., Nieto, L., Holzworth, D., Ciampitti, I.A., 2022. metrica: an R package to evaluate prediction performance of regression and classification point-forecast models. Journal of Open Source Software, 7(79), 4655, <https://joss.theoj.org/papers/10.21105/joss.04655>
+13. Bolster, C., **Correndo, A.A.**, Pearce, A., Spargo, J., Osmond, D., and Slaton, N., 2023. A spreadsheet for determining critical soil test values using the modified arcsine-log calibration curve. Submitted to *Soil Sci. Soc. Am. J.* 87, 182-189, <https://doi.org/10.1002/saj2.20498>
 
-14. Secchi, M.A., **Correndo, A.A.**, Stamm, M., Durrett , T., Vara Prasad, P.V., Messina, C., and Ciampitti , I.A., 202#. Suitability of different environments for winter canola oil production in the United States of America. *Field Crops Res*. 287, 108658. <https://doi.org/10.1016/j.fcr.2022.108658>
+14. **Correndo, A.A.**, Moro Rosso, L.H., Hernandez, C.H., Bastos, L.M., Nieto, L., Holzworth, D., Ciampitti, I.A., 2022. metrica: an R package to evaluate prediction performance of regression and classification point-forecast models. Journal of Open Source Software, 7(79), 4655, <https://joss.theoj.org/papers/10.21105/joss.04655>
 
-15. **Correndo, A.A.**, McArtor, B., Prestholt, A., Hernandez, C., Kyveryga, P., and Ciampitti , I.A., 2022. Interactive Soybean Variable-Rate Seeding Simulator for Farmers. *Agron. J.* 114, 3554-3565, <https://doi.org/10.1002/agj2.21181>
+15. Secchi, M.A., **Correndo, A.A.**, Stamm, M., Durrett , T., Vara Prasad, P.V., Messina, C., and Ciampitti , I.A., 202#. Suitability of different environments for winter canola oil production in the United States of America. *Field Crops Res*. 287, 108658. <https://doi.org/10.1016/j.fcr.2022.108658>
 
-16. Sadras, V.O., Giordano, N., **Correndo, A.A.**, Cossani, M., Ferreyra, J.M., Caviglia, O.P., Coulter, J.A., Ciampitti , I.A., and Lollato,R.A., 2022. Temperature-driven developmental modulation of yield response to nitrogen in wheat and maize. *Frontiers in Agronomy.* <https://doi.org/10.3389/fagro.2022.903340>
+16. **Correndo, A.A.**, McArtor, B., Prestholt, A., Hernandez, C., Kyveryga, P., and Ciampitti , I.A., 2022. Interactive Soybean Variable-Rate Seeding Simulator for Farmers. *Agron. J.* 114, 3554-3565, <https://doi.org/10.1002/agj2.21181>
 
-17. **Correndo, A.A.**, Adee, E., Moro Rosso, L.H., Tremblay, N., Vara Prasad, P.V., Du, J., and Ciampitti, I.A., 2022. Footprints of corn nitrogen management on the following soybean crop. *Agron. J.* 1-14. <https://doi.org/10.1002/agj2.21023>
+17. Sadras, V.O., Giordano, N., **Correndo, A.A.**, Cossani, M., Ferreyra, J.M., Caviglia, O.P., Coulter, J.A., Ciampitti , I.A., and Lollato,R.A., 2022. Temperature-driven developmental modulation of yield response to nitrogen in wheat and maize. *Frontiers in Agronomy.* <https://doi.org/10.3389/fagro.2022.903340>
 
-18. **Correndo, A.A.**, Tremblay, N., ...Ciampitti, I.A. et al., 2021. Unraveling uncertainty drivers of the maize yield response to nitrogen: A Bayesian and machine learning approach. *Agr. For. Meteorol.* 311, 108668. <https://doi.org/10.1016/j.agrformet.2021.108668>
+18. **Correndo, A.A.**, Adee, E., Moro Rosso, L.H., Tremblay, N., Vara Prasad, P.V., Du, J., and Ciampitti, I.A., 2022. Footprints of corn nitrogen management on the following soybean crop. *Agron. J.* 1-14. <https://doi.org/10.1002/agj2.21023>
 
-19. **Correndo, A.A.**, Gutierrez-Boem, F.H., Garcia, F.O.,... Salvagiotti, F., 2021. Attainable yield and soil texture as drivers of maize response to nitrogen: a synthesis analysis for Argentina. *Field Crops Res.* 273, 108299. <https://doi.org/10.1016/j.fcr.2021.108299>
+19. **Correndo, A.A.**, Tremblay, N., ...Ciampitti, I.A. et al., 2021. Unraveling uncertainty drivers of the maize yield response to nitrogen: A Bayesian and machine learning approach. *Agr. For. Meteorol.* 311, 108668. <https://doi.org/10.1016/j.agrformet.2021.108668>
 
-20. **Correndo, A.A.**, Fernandez, J., Prasad, V., Ciampitti, I.A., 2021. Do water and nitrogen management practices impact grain quality in maize? *Agronomy* 11(9), 1851. <https://doi.org/10.3390/agronomy11091851>
+20. **Correndo, A.A.**, Gutierrez-Boem, F.H., Garcia, F.O.,... Salvagiotti, F., 2021. Attainable yield and soil texture as drivers of maize response to nitrogen: a synthesis analysis for Argentina. *Field Crops Res.* 273, 108299. <https://doi.org/10.1016/j.fcr.2021.108299>
 
-21. Ciampitti, I.A., de Borja Reis, A.F., Cordova, C., Castellano, M.J., Archontoulis, S., **Correndo, A.A.**, Antunes de Almeida, L.F., Moro Rosso, L.H.,, 202X. Revisiting biological nitrogen fixation dynamics in soybeans. *Front. Plant Sci.* 12, 727021. <https://doi.org/10.3389/fpls.2021.727021>
+21. **Correndo, A.A.**, Fernandez, J., Prasad, V., Ciampitti, I.A., 2021. Do water and nitrogen management practices impact grain quality in maize? *Agronomy* 11(9), 1851. <https://doi.org/10.3390/agronomy11091851>
 
-22. Moro Rosso, L.H., de Borja Reis, A.F., **Correndo, A.A.**, Ciampitti, I.A., 2021. XPolaris: an R-package to retrieve United States soil data at 30-meter resolution. *BMC Res Notes* 14, 327. <https://doi.org/10.1186/s13104-021-05729-y>
+22. Ciampitti, I.A., de Borja Reis, A.F., Cordova, C., Castellano, M.J., Archontoulis, S., **Correndo, A.A.**, Antunes de Almeida, L.F., Moro Rosso, L.H.,, 202X. Revisiting biological nitrogen fixation dynamics in soybeans. *Front. Plant Sci.* 12, 727021. <https://doi.org/10.3389/fpls.2021.727021>
 
-23. **Correndo, A.A.**, Hefley, T., Holzworth, D., Ciampitti, I.A., 2021. Revisiting linear regression to test agreement in continuous predicted-observed datasets. *Agr. Syst.* 192, 103194. <https://doi.org/10.1016/j.agsy.2021.103194>
+23. Moro Rosso, L.H., de Borja Reis, A.F., **Correndo, A.A.**, Ciampitti, I.A., 2021. XPolaris: an R-package to retrieve United States soil data at 30-meter resolution. *BMC Res Notes* 14, 327. <https://doi.org/10.1186/s13104-021-05729-y>
 
-24. **Correndo, A.A.**, Moro Rosso, L.H., Ciampitti, I.A., 2021. Retrieving and processing agro-meteorological from API-client sources using R software. *BMC Res. Notes* 14, 205. <https://doi.org/10.1186/s13104-021-05622-8>
+24. **Correndo, A.A.**, Hefley, T., Holzworth, D., Ciampitti, I.A., 2021. Revisiting linear regression to test agreement in continuous predicted-observed datasets. *Agr. Syst.* 192, 103194. <https://doi.org/10.1016/j.agsy.2021.103194>
 
-25. **Correndo, A.A.**, Rubio, G., Garcia, F.O., Ciampitti, I.A., 2021. Subsoil-potassium depletion accounts for the nutrient budget in high-potassium agricultural soils. *Sci. Rep.* 11, 11597. <https://doi.org/10.1038/s41598-021-90297-1>
+25. **Correndo, A.A.**, Moro Rosso, L.H., Ciampitti, I.A., 2021. Retrieving and processing agro-meteorological from API-client sources using R software. *BMC Res. Notes* 14, 205. <https://doi.org/10.1186/s13104-021-05622-8>
 
-26. **Correndo, A.A.**, Rotundo, J.L., Tremblay, N., et al., 2021. Assessing the uncertainty of maize yield with no nitrogen fertilization. *Field Crops Res.* 260, 107985. <https://doi.org/10.1016/j.fcr.2020.107985>
+26. **Correndo, A.A.**, Rubio, G., Garcia, F.O., Ciampitti, I.A., 2021. Subsoil-potassium depletion accounts for the nutrient budget in high-potassium agricultural soils. *Sci. Rep.* 11, 11597. <https://doi.org/10.1038/s41598-021-90297-1>
 
-27. Appelhans, S.C., Carciochi, W.D., **Correndo, A.A.**, et al. 2021. Predicting soil test phosphorus decrease in non‐P‐fertilized conditions. *Eur. J. Soil Sci.* 2021; 1-- 11. <https://doi.org/10.1111/ejss.12946>
+27. **Correndo, A.A.**, Rotundo, J.L., Tremblay, N., et al., 2021. Assessing the uncertainty of maize yield with no nitrogen fertilization. *Field Crops Res.* 260, 107985. <https://doi.org/10.1016/j.fcr.2020.107985>
 
-28. **Correndo, A.A.**, Salvagiotti, F., García, F.O., Gutiérrez Boem, F.H., 2017. A modification of the arcsine-log calibration curve for analysing soil test value-relative yield relationships. *Crop and Pasture Science* 68 (3): 297-304. <https://doi.org/10.1071/CP16444>
+28. Appelhans, S.C., Carciochi, W.D., **Correndo, A.A.**, et al. 2021. Predicting soil test phosphorus decrease in non‐P‐fertilized conditions. *Eur. J. Soil Sci.* 2021; 1-- 11. <https://doi.org/10.1111/ejss.12946>
 
-29. Barbieri, P.A., Sainz Rozas, H.R. Wyngaard, N., Eyherabide, M., Reussi Calvo, N.I., Salvagotti, F., **Correndo, A.A.**, et al., 2017. Can Edaphic Variables Improve DTPA-Based Zinc Diagnosis in Corn?. *Soil Sci. Soc. Am. J.* 81, 556-563. <https://doi.org/10.2136/sssaj2016.09.0316>
+29. **Correndo, A.A.**, Salvagiotti, F., García, F.O., Gutiérrez Boem, F.H., 2017. A modification of the arcsine-log calibration curve for analysing soil test value-relative yield relationships. *Crop and Pasture Science* 68 (3): 297-304. <https://doi.org/10.1071/CP16444>
 
-30. **Correndo, A.A.**, Boxler, M., García, F.O., 2015. Economic analysis of fertilization management with focus on the long term. *Ci. Suelo* 33(2), 197-212. <http://www.suelos.org.ar/publicaciones/vol_33n2/v33n2a04.pdf>
+30. Barbieri, P.A., Sainz Rozas, H.R. Wyngaard, N., Eyherabide, M., Reussi Calvo, N.I., Salvagotti, F., **Correndo, A.A.**, et al., 2017. Can Edaphic Variables Improve DTPA-Based Zinc Diagnosis in Corn?. *Soil Sci. Soc. Am. J.* 81, 556-563. <https://doi.org/10.2136/sssaj2016.09.0316>
+
+31. **Correndo, A.A.**, Boxler, M., García, F.O., 2015. Economic analysis of fertilization management with focus on the long term. *Ci. Suelo* 33(2), 197-212. <http://www.suelos.org.ar/publicaciones/vol_33n2/v33n2a04.pdf>
 
 # 🎙️Extension
 
@@ -169,57 +171,60 @@ format:
 
 # 📓Conferences
 
-## Total (45)
+## Total (46)
 
-### Most recent (24)
+### Most recent (25)
 
-1.  **Correndo, A. A.**, Lacasa, J., Whetten, A., Hefley, T., Clark, J., Ransom, C. J., & Ciampitti, I. A. (2023) Corn Yield Variance in Response to Nitrogen Fertilization \[Abstract\]. ASA, CSSA, SSSA International Annual Meeting, St. Louis, MO. https://scisoc.confex.com/scisoc/2023am/meetingapp.cgi/Paper/150062
+1.  Almeida, L. F., da Rocha Hintz, G., Gómez, F., Palmero, F., **Correndo, A.A.**, Ross, J., Licht, M. A., Casteel, S., Singh, M. P., Naeve, S. L., Vann, R. A., Lindsey, L. E., Conley, S. P., Kleinjan, J., Kovacs, P., Reiter, M. S., Holshouser, D. L., Hefley, T., Prasad, P. V. V., Ciampitti, I. A. 2024. Soybean Temporal Nitrogen Fixation Patterns and Drivers \[Abstract\]. ASA, CSSA, SSSA International Annual Meeting, San Antonio, TX.
+    https://scisoc.confex.com/scisoc/2024am/meetingapp.cgi/Paper/158203
 
-2.  Almeida, L. F., Ciampitti, I. A., **Correndo, A. A.**, & Hefley, T. (2023) Quantifying Main Drivers of Soybean Yield & N Fixation and Their Uncertainties in the United States \[Abstract\]. ASA, CSSA, SSSA International Annual Meeting, St. Louis, MO. https://scisoc.confex.com/scisoc/2023am/meetingapp.cgi/Paper/150511
+2.  **Correndo, A. A.**, Lacasa, J., Whetten, A., Hefley, T., Clark, J., Ransom, C. J., & Ciampitti, I. A. (2023) Corn Yield Variance in Response to Nitrogen Fertilization \[Abstract\]. ASA, CSSA, SSSA International Annual Meeting, St. Louis, MO. https://scisoc.confex.com/scisoc/2023am/meetingapp.cgi/Paper/150062
 
-3.  Giordano, N., Sadras, V. O., **Correndo, A. A.**, & Lollato, R. P. (2023) Cultivar-Specific Phenotypic Plasticity of Yield and Grain Protein Concentration in Response to Nitrogen in Winter Wheat \[Abstract\]. ASA, CSSA, SSSA International Annual Meeting, St. Louis, MO. https://scisoc.confex.com/scisoc/2023am/meetingapp.cgi/Paper/149008
+3.  Almeida, L. F., Ciampitti, I. A., **Correndo, A. A.**, & Hefley, T. (2023) Quantifying Main Drivers of Soybean Yield & N Fixation and Their Uncertainties in the United States \[Abstract\]. ASA, CSSA, SSSA International Annual Meeting, St. Louis, MO. https://scisoc.confex.com/scisoc/2023am/meetingapp.cgi/Paper/150511
 
-4.  Hernandez, C., **Correndo, A. A.**, Prestholt, A., Kyveryga, P., & Ciampitti, I. A. (2023) On-Farm Soybean Quality Predictive Modelling Using Remote Sensing \[Abstract\]. ASA, CSSA, SSSA International Annual Meeting, St. Louis, MO. https://scisoc.confex.com/scisoc/2023am/meetingapp.cgi/Paper/149426
+4.  Giordano, N., Sadras, V. O., **Correndo, A. A.**, & Lollato, R. P. (2023) Cultivar-Specific Phenotypic Plasticity of Yield and Grain Protein Concentration in Response to Nitrogen in Winter Wheat \[Abstract\]. ASA, CSSA, SSSA International Annual Meeting, St. Louis, MO. https://scisoc.confex.com/scisoc/2023am/meetingapp.cgi/Paper/149008
 
-5.  Bosche, L., **Correndo, A. A.**, Almeida, L. F., & Ciampitti, I. A. 2023. Understanding Nitrogen Nutrition in Soybeans: A Synthesis Analysis \[Abstract\]. ASA, CSSA, SSSA International Annual Meeting, St. Louis, MO. https://scisoc.confex.com/scisoc/2023am/meetingapp.cgi/Paper/149747
+5.  Hernandez, C., **Correndo, A. A.**, Prestholt, A., Kyveryga, P., & Ciampitti, I. A. (2023) On-Farm Soybean Quality Predictive Modelling Using Remote Sensing \[Abstract\]. ASA, CSSA, SSSA International Annual Meeting, St. Louis, MO. https://scisoc.confex.com/scisoc/2023am/meetingapp.cgi/Paper/149426
 
-6.  Toribio, M., **Correndo, A.A.**, Reussi Calvo, N. 2022. Sintesis analisis sobre el efecto de inhibidores de la actividad ureasica en el cultivo de maiz. XXVIII Congreso Argentino de la Ciencia del Suelo. Nov 15-18, Buenos Aires, Argentina. https://congreso2022.suelos.org.ar/actas/
+6.  Bosche, L., **Correndo, A. A.**, Almeida, L. F., & Ciampitti, I. A. 2023. Understanding Nitrogen Nutrition in Soybeans: A Synthesis Analysis \[Abstract\]. ASA, CSSA, SSSA International Annual Meeting, St. Louis, MO. https://scisoc.confex.com/scisoc/2023am/meetingapp.cgi/Paper/149747
 
-7.  Toribio, M., **Correndo, A.A.**, Reussi Calvo, N. 2022. Factores determinantes de las perdidas de nitrogeno por volatilizacion en maiz. XXVIII Congreso Argentino de la Ciencia del Suelo. Nov 15-18, Buenos Aires, Argentina. https://congreso2022.suelos.org.ar/actas/
+7.  Toribio, M., **Correndo, A.A.**, Reussi Calvo, N. 2022. Sintesis analisis sobre el efecto de inhibidores de la actividad ureasica en el cultivo de maiz. XXVIII Congreso Argentino de la Ciencia del Suelo. Nov 15-18, Buenos Aires, Argentina. https://congreso2022.suelos.org.ar/actas/
 
-8.  Reussi Calvo, N., Cortez, D., Trujillo, R., **Correndo, A.A.**, Carciochi, W., Garcia, F.O. 2022. Calibracion de fosforo Olsen para maiz y soja en Santa Cruz de la Sierra-Bolivia. XXVIII Congreso Argentino de la Ciencia del Suelo. Nov 15-18, Buenos Aires, Argentina. https://congreso2022.suelos.org.ar/actas/
+8.  Toribio, M., **Correndo, A.A.**, Reussi Calvo, N. 2022. Factores determinantes de las perdidas de nitrogeno por volatilizacion en maiz. XXVIII Congreso Argentino de la Ciencia del Suelo. Nov 15-18, Buenos Aires, Argentina. https://congreso2022.suelos.org.ar/actas/
 
-9.  Damianidis, D., Reussi Calvo, N., García, F.O., Alvarez, C., Barbieri, P.A., Sainz Rozas, H., Barraco, M.R., Brach, A.M., Boero, J., Castellarin, J., Ferraris, G., Gómez, F.M., Gudelj, V., Gutiérrez-Boem, F.H., Kruger, H.R., Loewy, T., Manlla, A.G., Melion, D., Videla Mensegue, H., Pagnan, L.F., Pautasso, J.M., Prystupa, P., Pugliese, L. Ventimiglia, L., M. Diaz-Zorita, M., **Correndo, A.A.**, Salvagiotti, F. 2022. Quantitative and qualitative wheat response to nitrogen fertilization in the Argentinean Pampas; A synthesis-analysis. XXVIII Congreso Argentino de la Ciencia del Suelo. Nov 15-18, Buenos Aires, Argentina. https://congreso2022.suelos.org.ar/actas/
+9.  Reussi Calvo, N., Cortez, D., Trujillo, R., **Correndo, A.A.**, Carciochi, W., Garcia, F.O. 2022. Calibracion de fosforo Olsen para maiz y soja en Santa Cruz de la Sierra-Bolivia. XXVIII Congreso Argentino de la Ciencia del Suelo. Nov 15-18, Buenos Aires, Argentina. https://congreso2022.suelos.org.ar/actas/
 
-10. Bolster, C., **Correndo, A.A.**, Pearce, A., Spargo, J.T., Slaton, N.A., Osmond, D.L. 2022. A Spreadsheet for Determining Critical Soil Test Values Using the Modified Arcsine-Log Calibration Curve. Nov 6-9, Baltimore, MD, USA. [LINK](https://scisoc.confex.com/scisoc/2022am/meetingapp.cgi/Paper/145009)
+10. Damianidis, D., Reussi Calvo, N., García, F.O., Alvarez, C., Barbieri, P.A., Sainz Rozas, H., Barraco, M.R., Brach, A.M., Boero, J., Castellarin, J., Ferraris, G., Gómez, F.M., Gudelj, V., Gutiérrez-Boem, F.H., Kruger, H.R., Loewy, T., Manlla, A.G., Melion, D., Videla Mensegue, H., Pagnan, L.F., Pautasso, J.M., Prystupa, P., Pugliese, L. Ventimiglia, L., M. Diaz-Zorita, M., **Correndo, A.A.**, Salvagiotti, F. 2022. Quantitative and qualitative wheat response to nitrogen fertilization in the Argentinean Pampas; A synthesis-analysis. XXVIII Congreso Argentino de la Ciencia del Suelo. Nov 15-18, Buenos Aires, Argentina. https://congreso2022.suelos.org.ar/actas/
 
-11. **Correndo, A.A.**, Ciampitti, I.A. 2022. The Venture Creation in Data Science: Developing Packages and Web Tools Using R. Nov 6-9, Baltimore, MD, USA. <https://scisoc.confex.com/scisoc/2022am/meetingapp.cgi/Paper/142282>
+11. Bolster, C., **Correndo, A.A.**, Pearce, A., Spargo, J.T., Slaton, N.A., Osmond, D.L. 2022. A Spreadsheet for Determining Critical Soil Test Values Using the Modified Arcsine-Log Calibration Curve. Nov 6-9, Baltimore, MD, USA. [LINK](https://scisoc.confex.com/scisoc/2022am/meetingapp.cgi/Paper/145009)
 
-12. **Correndo, A.A.**, Holzworth, D., Ciampitti, I.A. 2022. Comparing Error Metrics to Test Predicted-Observed Agreement for Continuous Variables. Nov 6-9, Baltimore, MD, USA. <https://scisoc.confex.com/scisoc/2022am/meetingapp.cgi/Paper/142306>
+12. **Correndo, A.A.**, Ciampitti, I.A. 2022. The Venture Creation in Data Science: Developing Packages and Web Tools Using R. Nov 6-9, Baltimore, MD, USA. <https://scisoc.confex.com/scisoc/2022am/meetingapp.cgi/Paper/142282>
 
-13. Antunes de Almeida, L.F., **Correndo, A.A.**, et al. 2022. Soybean Yield Response to Nitrogen and Sulfur Fertilization in the United States. Nov 6-9, Baltimore, MD, USA. <https://scisoc.confex.com/scisoc/2022am/meetingapp.cgi/Paper/143887>
+13. **Correndo, A.A.**, Holzworth, D., Ciampitti, I.A. 2022. Comparing Error Metrics to Test Predicted-Observed Agreement for Continuous Variables. Nov 6-9, Baltimore, MD, USA. <https://scisoc.confex.com/scisoc/2022am/meetingapp.cgi/Paper/142306>
 
-14. Giordano, N., **Correndo, A.A.**, Sadras, V.O., Lollato, R. 2022. Phenotypic Plasticity Unravels Genotype Specific Response to Nitrogen in Winter Wheat. Nov 6-9, Baltimore, MD, USA. <https://scisoc.confex.com/scisoc/2022am/meetingapp.cgi/Paper/142402>
+14. Antunes de Almeida, L.F., **Correndo, A.A.**, et al. 2022. Soybean Yield Response to Nitrogen and Sulfur Fertilization in the United States. Nov 6-9, Baltimore, MD, USA. <https://scisoc.confex.com/scisoc/2022am/meetingapp.cgi/Paper/143887>
 
-15. Ciampitti, I.A., **Correndo, A.A.**. 2022. Re-thinking effective use of niutrogen in major field crops, integrating breeding and management. Aug. 1-3, Lincoln, NE, USA. <https://agronomy.unl.edu/workshops-fielddays/NUE/presentations/Correndo_Ciampitti.pdf>
+15. Giordano, N., **Correndo, A.A.**, Sadras, V.O., Lollato, R. 2022. Phenotypic Plasticity Unravels Genotype Specific Response to Nitrogen in Winter Wheat. Nov 6-9, Baltimore, MD, USA. <https://scisoc.confex.com/scisoc/2022am/meetingapp.cgi/Paper/142402>
 
-16. **Correndo, A.A.**, Hefley, T., Holzworth, D., and Ciampitti, I. A., 2021. How should we use linear regression to test models performance?. 2021 ASA-CSSA-SSSA Meetings. Nov. 7-10, Salt Lake City, UT, USA. <https://scisoc.confex.com/scisoc/2021am/meetingapp.cgi/Paper/135506>
+16. Ciampitti, I.A., **Correndo, A.A.**. 2022. Re-thinking effective use of niutrogen in major field crops, integrating breeding and management. Aug. 1-3, Lincoln, NE, USA. <https://agronomy.unl.edu/workshops-fielddays/NUE/presentations/Correndo_Ciampitti.pdf>
 
-17. **Correndo, A.A.**, Tremblay, N., Coulter, J. A., Ruiz Diaz, D. A., Franzen, D. W., Nafziger, E., Prasad, P. V. V., Rosso, L. M., Steinke, K., Du, J., Messina, C. D., and Ciampitti, I. A.. 2021. Disentangling Corn Yield Response to Nitrogen with Bayesian and Machine Learning Models. 2021 ASA-CSSA-SSSA Meetings. Nov. 7-10, Salt Lake City, UT, USA. <https://scisoc.confex.com/scisoc/2021am/meetingapp.cgi/Paper/135568>
+17. **Correndo, A.A.**, Hefley, T., Holzworth, D., and Ciampitti, I. A., 2021. How should we use linear regression to test models performance?. 2021 ASA-CSSA-SSSA Meetings. Nov. 7-10, Salt Lake City, UT, USA. <https://scisoc.confex.com/scisoc/2021am/meetingapp.cgi/Paper/135506>
 
-18. **Correndo, A.A.**, & I. Ciampitti. 2020. Forecasting corn yield in Kansas. 2019 Kansas Corn Symposium. Jan. 23, Manhattan, KS, USA.
+18. **Correndo, A.A.**, Tremblay, N., Coulter, J. A., Ruiz Diaz, D. A., Franzen, D. W., Nafziger, E., Prasad, P. V. V., Rosso, L. M., Steinke, K., Du, J., Messina, C. D., and Ciampitti, I. A.. 2021. Disentangling Corn Yield Response to Nitrogen with Bayesian and Machine Learning Models. 2021 ASA-CSSA-SSSA Meetings. Nov. 7-10, Salt Lake City, UT, USA. <https://scisoc.confex.com/scisoc/2021am/meetingapp.cgi/Paper/135568>
 
-19. **Correndo, A.A.**, N. Tremblay, J. Rotundo, J. DeBruin, C. Messina, R. Schwalbert, J. Coulter, D. Ruiz-Diaz, A. Franzluebbers, J. Williams, S. Archontoulis, K. Steinke, E. Nafziger, D. Franzen, & I. Ciampitti. 2019. Corn nitrogen responsiveness in North America: a review. 2019 ASA-CSSA-SSSA Meetings. Nov. 10-13, San Antonio, TX, USA.
+19. **Correndo, A.A.**, & I. Ciampitti. 2020. Forecasting corn yield in Kansas. 2019 Kansas Corn Symposium. Jan. 23, Manhattan, KS, USA.
 
-20. **Correndo, A.A.**, & I. Ciampitti. 2019. Breaking Yield Barriers in Corn-Soybean. 2019 Kansas Corn Symposium. Jan. 23, Manhattan, KS, USA.
+20. **Correndo, A.A.**, N. Tremblay, J. Rotundo, J. DeBruin, C. Messina, R. Schwalbert, J. Coulter, D. Ruiz-Diaz, A. Franzluebbers, J. Williams, S. Archontoulis, K. Steinke, E. Nafziger, D. Franzen, & I. Ciampitti. 2019. Corn nitrogen responsiveness in North America: a review. 2019 ASA-CSSA-SSSA Meetings. Nov. 10-13, San Antonio, TX, USA.
 
-21. **Correndo, A.A.**, F. Salvagiotti, F. García, & F.H. Gutiérrez-Boem. 2018. Attainable yield and soil texture as drivers of pre-plant nitrogen test performance in corn in the argentine pampas. 2018 ASA-CSSA meetings. Nov. 4-7, Baltimore, MD, USA.
+21. **Correndo, A.A.**, & I. Ciampitti. 2019. Breaking Yield Barriers in Corn-Soybean. 2019 Kansas Corn Symposium. Jan. 23, Manhattan, KS, USA.
 
-22. Balboa, G., **A. Correndo**, M. Stewart, F. Salvagiotti, F.O. Garcia, E. Francisco, J.M Enrico and I.A. Ciampitti. 2018. Intensifying Soybean Management Systems in United States, Brazil and Argentina. 2018 ASA-CSSA meetings. Nov. 4-7, Baltimore, MD, USA.
+22. **Correndo, A.A.**, F. Salvagiotti, F. García, & F.H. Gutiérrez-Boem. 2018. Attainable yield and soil texture as drivers of pre-plant nitrogen test performance in corn in the argentine pampas. 2018 ASA-CSSA meetings. Nov. 4-7, Baltimore, MD, USA.
 
-23. **Correndo, A.A.**, & F.O. Garcia. 2018. The utopia of the balanced fertilization of the cropping systems in Argentina. Proceedings of XXVI Argentinean Soil Science Congress. 15-18th, May 2018. Tucumán, Argentina.
+23. Balboa, G., **A. Correndo**, M. Stewart, F. Salvagiotti, F.O. Garcia, E. Francisco, J.M Enrico and I.A. Ciampitti. 2018. Intensifying Soybean Management Systems in United States, Brazil and Argentina. 2018 ASA-CSSA meetings. Nov. 4-7, Baltimore, MD, USA.
 
-24. **Correndo, A.A.**, F. Salvagiotti, F. García, & F.H. Gutiérrez-Boem. 2018. Recalibration of Bray1-P critical thresholds for corn and soybean in Argentina. CLAP 2018. I Latin American Congress of Precision Agriculture. 11-13th April 2018. Santiago, Chile. [DOI: 10.13140/RG.2.2.28706.73922](https://www.researchgate.net/publication/324703753_Recalibracion_de_umbrales_criticos_de_P-Bray_para_maiz_y_soja_en_Argentina)
+24. **Correndo, A.A.**, & F.O. Garcia. 2018. The utopia of the balanced fertilization of the cropping systems in Argentina. Proceedings of XXVI Argentinean Soil Science Congress. 15-18th, May 2018. Tucumán, Argentina.
+
+25. **Correndo, A.A.**, F. Salvagiotti, F. García, & F.H. Gutiérrez-Boem. 2018. Recalibration of Bray1-P critical thresholds for corn and soybean in Argentina. CLAP 2018. I Latin American Congress of Precision Agriculture. 11-13th April 2018. Santiago, Chile. [DOI: 10.13140/RG.2.2.28706.73922](https://www.researchgate.net/publication/324703753_Recalibracion_de_umbrales_criticos_de_P-Bray_para_maiz_y_soja_en_Argentina)
 
 # 
 :::
